--- a/res/layout/home.xml
+++ b/res/layout/home.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
+              android:background="@android:color/white"
               android:layout_height="match_parent" android:weightSum="1">
 
     <Button style="?android:attr/buttonStyleSmall" android:textColor="@android:color/black"
@@ -13,5 +14,5 @@
             android:layout_width="match_parent"
 
             android:layout_height="wrap_content"
-            android:id="@+id/imageView" android:layout_weight="0.76"/>
+            android:id="@+id/imageView" android:layout_weight="0.76" android:background="@drawable/tehran"/>
 </LinearLayout>
