--- a/res/layout/about.xml
+++ b/res/layout/about.xml
@@ -6,11 +6,15 @@
 
     <Button style="?android:attr/buttonStyleSmall" android:textColor="@android:color/black"
             android:background="@android:color/holo_blue_bright" android:layout_width="match_parent"
-            android:layout_height="wrap_content" android:textStyle="bold" android:text="اخبار" android:id="@+id/button3"
+            android:layout_height="wrap_content" android:textStyle="bold" android:text="درباره ما" android:id="@+id/button3"
             android:layout_alignParentTop="true" android:layout_alignParentRight="true"
             android:layout_alignParentLeft="true" android:layout_gravity="center_horizontal"/>
-    <WebView
+    <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/webView2" android:layout_gravity="center_horizontal"/>
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="این برنامه توسط النون تولید شده است..."
+            android:background="@android:color/white"
+            android:textColor="@android:color/black"
+            android:id="@+id/textView2"/>
 </LinearLayout>
