--- a/res/layout/about.xml
+++ b/res/layout/about.xml
@@ -1,14 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent" android:weightSum="1">
+              android:layout_height="match_parent" android:weightSum="1" android:id="@+id/rl">
 
-    <Button style="?android:attr/buttonStyleSmall" android:textColor="@android:color/black"
-            android:background="@android:color/holo_blue_bright" android:layout_width="match_parent"
-            android:layout_height="wrap_content" android:textStyle="bold" android:text="درباره ما" android:id="@+id/button3"
-            android:layout_alignParentTop="true" android:layout_alignParentRight="true"
-            android:layout_alignParentLeft="true" android:layout_gravity="center_horizontal"/>
+    <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="راهنما"
+            android:textStyle="bold"
+
+            android:textColor="@android:color/black"
+            android:background="@android:color/holo_purple"
+            android:id="@+id/helpbutton" android:layout_gravity="right"
+            android:layout_alignParentBottom="true" android:layout_alignParentLeft="true"
+            android:layout_marginBottom="76dp"/>
+
     <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -16,5 +24,7 @@
             android:text="این برنامه توسط النون تولید شده است..."
             android:background="@android:color/white"
             android:textColor="@android:color/black"
-            android:id="@+id/textView2"/>
-</LinearLayout>
+            android:id="@+id/textView2"
+            android:layout_alignParentBottom="true" android:layout_alignParentLeft="true"
+            android:layout_below="@+id/aboutbutton"/>
+</RelativeLayout>
