--- a/res/layout/home.xml
+++ b/res/layout/home.xml
@@ -1,18 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:background="@android:color/white"
               android:layout_height="match_parent" android:weightSum="1">
-
-    <Button style="?android:attr/buttonStyleSmall" android:textColor="@android:color/black"
-            android:background="@android:color/holo_blue_bright" android:layout_width="match_parent"
-            android:layout_height="wrap_content" android:textStyle="bold" android:text="خانه" android:id="@+id/button2"
-            android:layout_alignParentTop="true" android:layout_alignParentRight="true"
-            android:layout_alignParentLeft="true" android:layout_gravity="center_horizontal"/>
-    <ImageView
+<ImageView
             android:layout_width="match_parent"
 
             android:layout_height="wrap_content"
-            android:id="@+id/imageView" android:layout_weight="0.76" android:background="@drawable/tehran"/>
-</LinearLayout>
+            android:id="@+id/imageView" android:layout_weight="0.76" android:background="@drawable/tehran"
+            android:layout_below="@+id/homebutton" android:layout_alignParentLeft="true"/>
+</RelativeLayout>
