--- a/res/layout/news.xml
+++ b/res/layout/news.xml
@@ -39,23 +39,21 @@
             android:textStyle="bold"
             android:id="@+id/about" android:layout_alignParentTop="true" android:layout_toLeftOf="@+id/home"/>
 -->
-    <Button
 
-            android:textColor="@android:color/black"
-            android:background="@android:color/holo_blue_bright"
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:text="اخبار"
-            android:id="@+id/rss" android:layout_alignParentTop="true" android:layout_alignParentRight="true"
-            android:layout_alignParentLeft="true"/>
-   <!-- <Button style="?android:attr/buttonStyleSmall" android:layout_width="120dp" android:layout_height="wrap_content"
-            android:text="جستجو" android:textColor="@android:color/black"
-            android:textStyle="bold"
-            android:background="@android:color/holo_blue_bright" android:id="@+id/search"
-            android:layout_alignParentTop="true" android:layout_toLeftOf="@+id/help"/>
-    --><WebView
+
+    <!--  <Button
+              android:layout_width="50dp"
+              android:layout_height="50dp"
+              android:gravity="center_vertical|center_horizontal"
+              android:text="help"
+
+              android:textColor="#ff090909" />-->
+    <!-- <Button style="?android:attr/buttonStyleSmall" android:layout_width="120dp" android:layout_height="wrap_content"
+             android:text="جستجو" android:textColor="@android:color/black"
+             android:textStyle="bold"
+             android:background="@android:color/holo_blue_bright" android:id="@+id/search"
+             android:layout_alignParentTop="true" android:layout_toLeftOf="@+id/help"/>
+     --><WebView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/webView"
