--- a/res/layout/home.xml
+++ b/res/layout/home.xml
@@ -9,5 +9,19 @@
 
             android:layout_height="wrap_content"
             android:id="@+id/imageView" android:layout_weight="0.76" android:background="@drawable/tehran"
-            android:layout_below="@+id/homebutton" android:layout_alignParentLeft="true"/>
+             android:layout_alignParentLeft="true"/>
+    <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="N"
+            android:id="@+id/button1"
+            android:layout_marginTop="76dp" android:layout_alignParentTop="true"
+            />
+    <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="N"
+            android:id="@+id/button2"
+            android:layout_alignParentTop="true" android:layout_alignParentRight="true"
+            android:layout_marginRight="189dp"/>
 </RelativeLayout>
