--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -31,6 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="راهنما"
+            android:background="#00A693"
             android:id="@+id/helpbutton"/>
     <!--
 
