--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -10,7 +10,7 @@
             android:id="@+id/tabs"
             android:layout_width="fill_parent"
             android:layout_height="70dp"
-            android:background="#00A693"
+            android:background="#ffff30fd"
             android:focusable="false"
             app:shouldExpand="true"
 
@@ -31,7 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="راهنما"
-            android:background="#00A693"
+            android:background="#ffff30fd"
             android:id="@+id/helpbutton"/>
     <!--
 
