--- a/res/layout/listraw.xml
+++ b/res/layout/listraw.xml
@@ -4,7 +4,7 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
-    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    <TextView
               android:id="@+id/rowTextView"
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
